# simple-blockchain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bitblock/: CMakeLists.txt  bitblock.c  bitblock.h
chain/: CMakeLists.txt  chain.c  chain.h
coin/: CMakeLists.txt  coin.c  coin.h
pool/: client.h  cliient.c  jobdeliver.c  pool.h  server.c  server.h
